# i2c-common

./: Cargo.toml  README.md
src/: functionality.rs  lib.rs  msg.rs  timing.rs
